# adventofcode2018

./: LICENSE  README.md  adventofcode.cabal
app/: Main.hs
data/: day4.txt
src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs
