name:                adventofcode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/grassator/adventofcode2018#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitriy Kubyshkin
maintainer:          dmitriy@kubyshkin.name
copyright:           2018 Dmitriy Kubyshkin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          data/*.txt

library
  hs-source-dirs:      src
  exposed-modules:     Day1
                       Day2
                       Day3
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , text
                     , parsec
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings LambdaCase

executable adventofcode
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , text
                     , adventofcode
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings LambdaCase

source-repository head
  type:     git
  location: https://github.com/grassator/adventofcode2018
